2007-08-23 Pierangelo Masarati <masarati@aero.polimi.i>

	* RTAI 3.5 closure version

2007-08-23  Martin Plattl <martin.plattl@knapp.com>

	* /base/ipc/fifos/fifos.c: fixed a wrong test using free space in
	  place of available bytes in mbx_receive_if

2007-06-19  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/macros/Makefile: Changed the scilab version to 4.1.1.

	* rtai-lab/scilab/macros/RTAI/CodeGen_.sci: Eliminated some unused
	  functions.

2007-06-07  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/devices/*.c: Added copyright lines in the sources.

2007-05-25  Lennart.C. Karssen <l.c.karssen@phys.uu.nl>
            Paolo Mantegazza <mantegazza@aero.polimi.it>

	* addons/comedi/rtai_comedi.h: fixed a missing initialisation of the
	  local (on stack) copy of bits in comedi_dio_bitfield.

2007-05-22  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/rtai4_comedi_data*.sci: Changed the name
	  of the variable range to comedi_range to avoid conflicts
	  with a scilab function.

2007-05-10  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/matlab/rtai.tmf: Some changes needed for Matlab
	  >= 2006b (thanks to Emanuele Clerici).

2007-03-27  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/ipc/netrpc/netrpc.c: force asmlinkage using a variable
	  number of args for in kernel net syscalls, older compilers seem to
	  have it not with just asmlinkage.

2007-03-21  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-i386/rtai_lxrt.h: care of fpu_counter for Linux 
	  releases beyond 2.6.19.

2007-03-18  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/i386/hal/hal.immed: support for Linux > 2.6.19 in direct 
          vectoring and RTAI proper syscalls requires push/pop of gs and the
	  loading of KERNEL_PDA segment, a forgot to commit.

2007-03-17  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* upgrade to support Linux-2.6.20
	* base/include/rtai_hal_names.h: fix an ifdef that contains an